Wed Oct 09 15:01:09 2002  George Lebl <jirka@5z.com>

	* lib/linear_algebra/*.gel: add a bunch of basic linalg functions,
	  add protects to some, add some help strings and such

Wed Oct 09 14:28:57 2002  George Lebl <jirka@5z.com>

	* lib/linear_algebra/linear_algebra.gel: add a few functions

Wed Oct 09 12:42:16 2002  George Lebl <jirka@5z.com>

	* src/funclib.c: use x^0 in polytofunc to allow properly evaluating
	  with matrices

	* src/gnome-genius.c: flush after error display

Wed Oct 09 12:32:45 2002  George Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/inter.c, src/Makefile.am,
	  src/genius-readline-helper.c:  Build the readline helper and
	  backport the readline voodoo from dr.genius.  Also fix up
	  random other stuff on the frontend to make the gui work.

Sun Oct 06 20:44:18 2002  George Lebl <jirka@5z.com>

	* src/funclib.c: set call can take a string

	* src/disc.c: fix global set

	* src/eval.[ch], src/parse.y, src/calc.c: allow passing of
	  identifiers quoted with a backquote just like matrix, so
	  that we can pass an identifier to a function.  Also replace
	  = with == if we are in expression, so that if (a=1) works
	  like if (a==1).  Basically do what the user means, not what
	  he says.

Sun Oct 06 19:08:00 2002  George Lebl <jirka@5z.com>

	* configure.in, src/gnome-genius.c, Makefile.am: first pass
	  at porting to gnome2.  It seems to compile.

Sun Oct 06 18:48:12 2002  George Lebl <jirka@5z.com>

	* configure.in, src/*.h, **/Makefile.am: start the gnome2 porting
	  voodoo

Note that a lot of stuff happened here including syntax changes without a
changelog because I was a lazy bum.  Sue me.

Fri Sep 27 13:24:35 2002  George Lebl <jirka@5z.com>

	* Big fixing.  Basically apply the below patches to the 0.4.6 tree
	  remove the new context rewrite, fix a bunch of errors and crashes
	  and generally make the whole thing work.  Next up will be to
	  port it to gnome2 at some point though I think I might keep it