@@ -390,3 +390,4 @@ q=5; function f(x) = ( q = 6; set(`q,x); q) ; f(10) ; q		10
 l=9 ; if (l=9) then 1						1
 l=9 ; if (l=10) then 1 else 2					2
 l=9 ; if (l=10) then 1 else 2 ; l				9
+A=[1,2;3,4];B=A+4;[A,0;0,B]					[1,2,0,0;3,4,0,0;0,0,5,6;0,0,7,8]
