@@ -1,3 +1,13 @@
+Thu Oct 10 10:31:48 2002  George Lebl <jirka@5z.com>
+
+	* src/eval.c, lib/linear_algebra/linear_algebra.gel: fix matrix
+	  expansion and don't expand when not neccessary
+
+	* src/eval.c: don't force replace = by == if we move from a
+	  boolean context to a function definition one
+
+	* src/eval.c: attempt to fix broken dowhile/dountil
+
 Wed Oct 09 15:01:09 2002  George Lebl <jirka@5z.com>
 
 	* lib/linear_algebra/*.gel: add a bunch of basic linalg functions,
